@@ -21,6 +21,7 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.hivemq.api.AuthTestUtils;
 import com.hivemq.api.TestApiResource;
@@ -29,11 +30,13 @@ import com.hivemq.api.TestResourceLevelRolesApiResource;
 import com.hivemq.api.auth.handler.IAuthenticationHandler;
 import com.hivemq.api.auth.handler.impl.BearerTokenAuthenticationHandler;
 import com.hivemq.api.auth.jwt.JwtAuthenticationProvider;
+import com.hivemq.api.auth.provider.IUsernameRolesProvider;
 import com.hivemq.api.config.ApiJwtConfiguration;
 import com.hivemq.api.resources.impl.AuthenticationResourceImpl;
 import com.hivemq.configuration.service.ApiConfigurationService;
 import com.hivemq.edge.api.model.ApiBearerToken;
 import com.hivemq.edge.api.model.UsernamePasswordCredentials;
+import com.hivemq.extension.sdk.api.annotations.NotNull;
 import com.hivemq.http.HttpConstants;
 import com.hivemq.http.JaxrsHttpServer;
 import com.hivemq.http.config.JaxrsHttpServerConfiguration;
@@ -49,9 +52,12 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import org.glassfish.jersey.server.ResourceConfig;
+import org.jetbrains.annotations.Nullable;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * @author Simon L Johnson
@@ -59,44 +65,46 @@ import org.junit.jupiter.api.Test;
 @SuppressWarnings("MockNotUsedInProduction")
 public class BearerTokenAuthTests {
 
+    protected final Logger logger = LoggerFactory.getLogger(BearerTokenAuthTests.class);
+
     static final int TEST_HTTP_PORT = 8088;
     static final int CONNECT_TIMEOUT = 1000;
     static final int READ_TIMEOUT = 1000;
     static final String HTTP = "http";
-    protected static JaxrsHttpServer server;
 
-    private static ApiConfigurationService apiConfigurationService;
+    protected static JaxrsHttpServer server;
+    protected static ObjectMapper objectMapper = new ObjectMapper();
 
     @BeforeAll
     public static void setUp() throws Exception {
+
         final JaxrsHttpServerConfiguration config = new JaxrsHttpServerConfiguration();
         config.setPort(TEST_HTTP_PORT);
+        // -- ensure we supplied our own test mapper as this can effect output
+        config.setObjectMapper(objectMapper);
 
-        final ApiJwtConfiguration configuration = new ApiJwtConfiguration(2048, "Test-Issuer", "Test-Audience", 10, 2);
-        final JwtAuthenticationProvider jwtAuthenticationProvider = new JwtAuthenticationProvider(configuration);
-
+        final var configuration = new ApiJwtConfiguration(2048, "Test-Issuer", "Test-Audience", 10, 2);
+        final var jwtAuthenticationProvider = new JwtAuthenticationProvider(configuration);
+        final IUsernameRolesProvider usernamePasswordProvider = AuthTestUtils.createTestUsernamePasswordProvider();
         final Set<IAuthenticationHandler> authenticationHandlers = new HashSet<>();
         authenticationHandlers.add(new BearerTokenAuthenticationHandler(jwtAuthenticationProvider));
-
-        apiConfigurationService = mock(ApiConfigurationService.class);
+        // ChainedAuthTests also includes the usernamePasswordProvider
+        // authenticationHandlers.add(new BasicAuthenticationHandler(usernamePasswordProvider));
+        final var apiConfigurationService = mock(ApiConfigurationService.class);
         when(apiConfigurationService.isEnforceApiAuth()).thenReturn(true);
+        final var apiAuthenticationFeature =
+                new ApiAuthenticationFeature(authenticationHandlers, apiConfigurationService);
+        final var authenticationResource = new AuthenticationResourceImpl(
+                usernamePasswordProvider, jwtAuthenticationProvider, jwtAuthenticationProvider);
 
-        final ResourceConfig conf = new ResourceConfig() {
-            {
-                register(new ApiAuthenticationFeature(authenticationHandlers, apiConfigurationService));
-            }
-        };
-        conf.register(TestApiResource.class);
-        conf.register(TestPermitAllApiResource.class);
-        conf.register(TestResourceLevelRolesApiResource.class);
-        conf.register(new AuthenticationResourceImpl(
-                AuthTestUtils.createTestUsernamePasswordProvider(),
-                jwtAuthenticationProvider,
-                jwtAuthenticationProvider));
-        // -- ensure we supplied our own test mapper as this can effect output
-        final ObjectMapper mapper = new ObjectMapper();
-        config.setObjectMapper(mapper);
-        server = new JaxrsHttpServer(mock(), List.of(config), conf);
+        final var resourceConfig = new ResourceConfig();
+        resourceConfig.register(apiAuthenticationFeature);
+        resourceConfig.register(TestApiResource.class);
+        resourceConfig.register(TestPermitAllApiResource.class);
+        resourceConfig.register(TestResourceLevelRolesApiResource.class);
+        resourceConfig.register(authenticationResource);
+
+        server = new JaxrsHttpServer(mock(), List.of(config), resourceConfig);
         server.startServer();
     }
 
@@ -105,49 +113,52 @@ public class BearerTokenAuthTests {
         server.stopServer();
     }
 
-    protected static String getTestServerAddress(final String protocol, final int port, final String uri) {
-        final String url = String.format("%s://%s:%s/%s", protocol, "localhost", port, uri);
-        return url;
+    protected static HttpResponse get(final @NotNull String path, final @Nullable Map<String, String> headers)
+            throws IOException {
+        final var serverAddress = String.format("%s://%s:%s/%s", HTTP, "localhost", TEST_HTTP_PORT, path);
+        return HttpUrlConnectionClient.get(headers, serverAddress, CONNECT_TIMEOUT, READ_TIMEOUT);
+    }
+
+    protected static HttpResponse post(final @NotNull String path, final ByteArrayInputStream body) throws IOException {
+        final var headers = HttpUrlConnectionClient.JSON_HEADERS;
+        final var serverAddress = String.format("%s://%s:%s/%s", HTTP, "localhost", TEST_HTTP_PORT, path);
+        return HttpUrlConnectionClient.post(headers, serverAddress, body, CONNECT_TIMEOUT, READ_TIMEOUT);
+    }
+
+    protected ByteArrayInputStream bodyCredentials(final @NotNull String username, final @NotNull String password)
+            throws JsonProcessingException {
+        final var credentials =
+                new UsernamePasswordCredentials().userName(username).password(password);
+        return new ByteArrayInputStream(objectMapper.writeValueAsBytes(credentials));
     }
 
     @Test
     public void testAuthenticateValidUser() throws IOException {
+        HttpResponse response;
 
-        final ObjectMapper mapper = new ObjectMapper();
-        final UsernamePasswordCredentials creds =
-                new UsernamePasswordCredentials().userName("testuser").password("test");
-        final HttpResponse response = HttpUrlConnectionClient.post(
-                HttpUrlConnectionClient.JSON_HEADERS,
-                getTestServerAddress(HTTP, TEST_HTTP_PORT, "api/v1/auth/authenticate"),
-                new ByteArrayInputStream(mapper.writeValueAsBytes(creds)),
-                CONNECT_TIMEOUT,
-                READ_TIMEOUT);
+        response = post("api/v1/auth/authenticate", bodyCredentials("testuser", "test"));
+
         assertEquals(200, response.getStatusCode(), "Resource should be accepted");
         assertEquals(MediaType.APPLICATION_JSON, response.getContentType(), "API authenticate response should be json");
-        final ApiBearerToken token = mapper.readValue(response.getResponseBody(), ApiBearerToken.class);
+        final ApiBearerToken token = objectMapper.readValue(response.getResponseBody(), ApiBearerToken.class);
         assertNotNull(token.getToken(), "Response should contain a bearer token");
     }
 
     @Test
     public void testAuthenticateInvalidUser() throws IOException {
-        final ObjectMapper mapper = new ObjectMapper();
-        final UsernamePasswordCredentials credentials =
-                new UsernamePasswordCredentials().userName("testuser").password("invalidpassword");
-        final HttpResponse response = HttpUrlConnectionClient.post(
-                HttpUrlConnectionClient.JSON_HEADERS,
-                getTestServerAddress(HTTP, TEST_HTTP_PORT, "api/v1/auth/authenticate"),
-                new ByteArrayInputStream(mapper.writeValueAsBytes(credentials)),
-                CONNECT_TIMEOUT,
-                READ_TIMEOUT);
-        assertThat(response.getStatusCode())
-                .as("Resource should NOT be accepted")
-                .isEqualTo(401);
-        assertThat(response.getContentType())
-                .as("API authenticate response should be json")
-                .isEqualTo(HttpConstants.APPLICATION_PROBLEM_JSON_CHARSET_UTF_8);
-        assertThat(mapper.readValue(response.getResponseBody(), ProblemDetails.class)
+        HttpResponse response;
+
+        response = post("api/v1/auth/authenticate", bodyCredentials("testuser", "invalidpassword"));
+
+        assertEquals(401, response.getStatusCode(), "Resource should be denied");
+        assertEquals(
+                HttpConstants.APPLICATION_PROBLEM_JSON_CHARSET_UTF_8,
+                response.getContentType(),
+                "API authenticate response should be json");
+        assertThat(objectMapper
+                        .readValue(response.getResponseBody(), ProblemDetails.class)
                         .getErrors()
-                        .get(0)
+                        .getFirst()
                         .getDetail())
                 .as("Response should indicate correct failure message")
                 .isEqualTo("Invalid username and/or password");
@@ -155,32 +166,23 @@ public class BearerTokenAuthTests {
 
     @Test
     public void testAuthenticatedTokenAllowsApiAccess() throws IOException {
+        HttpResponse response;
 
-        final ObjectMapper mapper = new ObjectMapper();
-        final UsernamePasswordCredentials creds =
-                new UsernamePasswordCredentials().userName("testuser").password("test");
-        HttpResponse response = HttpUrlConnectionClient.post(
-                HttpUrlConnectionClient.JSON_HEADERS,
-                getTestServerAddress(HTTP, TEST_HTTP_PORT, "api/v1/auth/authenticate"),
-                new ByteArrayInputStream(mapper.writeValueAsBytes(creds)),
-                CONNECT_TIMEOUT,
-                READ_TIMEOUT);
+        response = post("api/v1/auth/authenticate", bodyCredentials("testuser", "test"));
+
         assertEquals(200, response.getStatusCode(), "Resource should be accepted");
         assertEquals(MediaType.APPLICATION_JSON, response.getContentType(), "API authenticate response should be json");
-        final ApiBearerToken token = mapper.readValue(response.getResponseBody(), ApiBearerToken.class);
+
+        final ApiBearerToken token = objectMapper.readValue(response.getResponseBody(), ApiBearerToken.class);
         assertNotNull(token.getToken(), "Response should contain a bearer token");
+        final var bodyToken = new ByteArrayInputStream(objectMapper.writeValueAsBytes(token));
 
         // -- now validate the token against the UNSECURE API which returns whether its valid
-        response = HttpUrlConnectionClient.post(
-                HttpUrlConnectionClient.JSON_HEADERS,
-                getTestServerAddress(HTTP, TEST_HTTP_PORT, "api/v1/auth/validate-token"),
-                new ByteArrayInputStream(mapper.writeValueAsBytes(token)),
-                CONNECT_TIMEOUT,
-                READ_TIMEOUT);
+        response = post("api/v1/auth/validate-token", bodyToken);
+
         assertEquals(200, response.getStatusCode(), "Resource should be accepted");
 
-        // -- finally use it as a bear token header against a secure endpoint
-
+        // -- finally use it as a bearer token header against a secure endpoint
         final Map<String, String> headers = Map.of(
                 HttpConstants.AUTH_HEADER,
                 HttpUtils.getBearerTokenAuthenticationHeaderValue(token.getToken()),
@@ -189,13 +191,10 @@ public class BearerTokenAuthTests {
                 "Accept",
                 "application/json");
 
-        response = HttpUrlConnectionClient.get(
-                headers,
-                getTestServerAddress(HTTP, TEST_HTTP_PORT, "test/get/auth/user"),
-                CONNECT_TIMEOUT,
-                READ_TIMEOUT);
+        response = get("test/get/auth/user", headers);
+
         assertEquals(200, response.getStatusCode(), "Resource should be accepted");
-        final ApiPrincipal user = mapper.readValue(response.getResponseBody(), ApiPrincipal.class);
+        final ApiPrincipal user = objectMapper.readValue(response.getResponseBody(), ApiPrincipal.class);
         assertEquals("testuser", user.getName(), "Username should match that supplied at point of auth");
     }
 }
